# Labs

LAB01/: CMakeLists.txt
LAB01/LAB01/: CMakeLists.txt
LAB01/LAB01/include/: GuessNumber.h  Separate.h  mergeSort.h
LAB01/LAB01/src/: GuessNumber.cpp  Separate.cpp  mergeSort.cpp
LAB01/LAB01/uts/: GuessNumber_tests.cpp  Separate_tests.cpp  mergeSort_tests.cpp
LAB02/: .gitignore  CMakeLists.txt
LAB02/LAB02/: CMakeLists.txt
LAB02/LAB02/include/: Any2Dec.h  Boyera.h  Dec2Any.h  Essentials.h  Palindrom.h
LAB02/LAB02/src/: Any2Dec.cpp  Boyera.cpp  Dec2Any.cpp  Palindrom.cpp
LAB02/LAB02/uts/: Any2Dec_tests.cpp  Boyera_tests.cpp  Dec2Any_tests.cpp  Palindrom_tests.cpp
LAB03/: .gitignore  CMakeLists.txt
LAB03/LAB03/: CMakeLists.txt
LAB03/LAB03/include/: Caesar.h  RLE.h  Rlev2.h
LAB03/LAB03/src/: Caesar.cpp  RLE.cpp  RleV2.cpp
LAB03/LAB03/uts/: Caesar_tests.cpp  RLE_tests.cpp  Rlev2_tests.cpp
